--- a/assets/css/sass/blocks/_post.scss
+++ b/assets/css/sass/blocks/_post.scss
@@ -41,9 +41,13 @@
     &.event-past,
     &.category-newsletter {
         @include transition(background 300ms ease-out);
-        &:hover {
-            background-color: $blue 
-        }
     }
+    &.event-upcoming:hover,
+    &.event-past:hover {    
+        background-color: $teal 
+    }
+    &.category-newsletter:hover { background-color: black; }
+    &.category-news a:hover,
+    &.category-press a:hover { color: $teal; }
 
 }
