build out project archive

--- a/assets/css/sass/blocks/_section.scss
+++ b/assets/css/sass/blocks/_section.scss
@@ -13,6 +13,14 @@
             @include flex-basis( flex-grid(10, $grid-columns) );
         }
     }
+    .has-sidebar.has-fat-sidebar & {
+        @include media($md) {
+            @include flex-basis( flex-grid(6, $grid-columns) );
+        }
+        @include media($lg) {
+            @include flex-basis( flex-grid(8, $grid-columns) );
+        }
+    }
     .section:last-of-type & {
         padding-bottom: 0;
         @extend .u-mb-6;
@@ -20,14 +28,20 @@
 }
 .section__sidebar {
     @include media($md) {
-        @include flex-basis( flex-grid(3, $grid-columns) );
         order: 2;
         margin-bottom: $leading * 6;
         .footer & {
             margin-bottom: 0;
         }
+        @include flex-basis( flex-grid(3, $grid-columns) );
+        .has-fat-sidebar & {
+            @include flex-basis( flex-grid(6, $grid-columns) );
+        }
     }
     @include media($lg) {
         @include flex-basis( flex-grid(2, $grid-columns) );
+        .has-fat-sidebar & {
+            @include flex-basis( flex-grid(4, $grid-columns) );
+        }
     }
 }
