--- a/assets/css/sass/views/_archive-project.scss
+++ b/assets/css/sass/views/_archive-project.scss
@@ -1,4 +1,8 @@
 .sidebar-map {
+    display: none;
+    @include media($md) {
+        display: block;
+    }
     position: -webkit-sticky;
     position: sticky; // locally testing intended behaviour; unsupported in ie, edge
     top: 0;
