--- a/assets/css/sass/shared/_variables.scss
+++ b/assets/css/sass/shared/_variables.scss
@@ -34,6 +34,7 @@ $teal: #21b07a;
 // Neutrals
 $dark-gray: #202022;
 $medium-gray: tint(black, 60%);
+$light-gray: tint(black, 80%);
 
 $color_map: (
 	// Primary
