--- a/assets/css/sass/shared/utility/_typography.scss
+++ b/assets/css/sass/shared/utility/_typography.scss
@@ -1,5 +1,6 @@
 // Typography
 // --------------------------------------- /
+.u-font-gta-extended { font-family: $gta-extended-black; text-transform: uppercase; }
 .u-weight-light { font-weight: 300; }
 .u-weight-normal { font-weight: 400; }
 .u-weight-medium { font-weight: 500; }
