--- a/assets/css/sass/shared/utility/_effects.scss
+++ b/assets/css/sass/shared/utility/_effects.scss
@@ -1,8 +1,11 @@
 // Transitions
 // ------------------------------------------ /
 .u-transition-300 {
-	@include transition( all 300ms ease );
+	@include transition( all 300ms ease-out );
 }
 .u-transition-500 {
-	@include transition( all 500ms ease );
+	@include transition( all 500ms ease-out );
+}
+.u-cursor-pointer {
+	cursor: pointer;
 }
