--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,14 +663,17 @@ hr {
   overflow: hidden; }
 
 .u-transition-300, .site-menu {
-  -webkit-transition: all 300ms ease;
-  -moz-transition: all 300ms ease;
-  transition: all 300ms ease; }
+  -webkit-transition: all 300ms ease-out;
+  -moz-transition: all 300ms ease-out;
+  transition: all 300ms ease-out; }
 
 .u-transition-500 {
-  -webkit-transition: all 500ms ease;
-  -moz-transition: all 500ms ease;
-  transition: all 500ms ease; }
+  -webkit-transition: all 500ms ease-out;
+  -moz-transition: all 500ms ease-out;
+  transition: all 500ms ease-out; }
+
+.u-cursor-pointer {
+  cursor: pointer; }
 
 .u-width-1 {
   width: 6.17%; }
