--- a/assets/css/sass/blocks/_filters.scss
+++ b/assets/css/sass/blocks/_filters.scss
@@ -8,7 +8,7 @@
         width: 50%;
         float: left;
         a {
-            border-left: 2px solid;
+            border-left: $border-width solid;
             padding-left: 1em;
         }
         &:nth-child(2n+1) {
@@ -22,7 +22,7 @@
         width: 20%;
         &:nth-child(2n+1) {
             a {
-                border-left: 2px solid;
+                border-left: $border-width solid;
                 padding-left: 1em;
             }
         }
