build out more of single project

--- a/assets/css/sass/base/_typography.scss
+++ b/assets/css/sass/base/_typography.scss
@@ -103,7 +103,7 @@ textarea {
  * ------------------------------------------ */
 
 p, .p {
-	margin-top: $leading * 2;
+	margin-top: $leading;
     margin-bottom: 0;
 	text-transform: none;
 	font-family: $gta-regular;
