--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -361,7 +361,7 @@ a {
 /* Copy
  * ------------------------------------------ */
 p, .p {
-  margin-top: 2rem;
+  margin-top: 1rem;
   margin-bottom: 0;
   text-transform: none;
   font-family: "GT-America-Regular", Arial, sans-serif;
@@ -1654,10 +1654,6 @@ figure {
 .module--basic .module__aside {
   flex: 0 0 31.76%; }
 
-@media screen and (min-width: 768px) {
-  .page-content, .post-content {
-    padding-right: 30%; } }
-
 .page-numbers {
   color: #999999; }
   .page-numbers.current, .page-numbers.prev, .page-numbers.next {
@@ -2121,6 +2117,33 @@ caption {
 .site-menu-content {
   min-height: 100%;
   height: 100%; }
+
+@media screen and (min-width: 1000px) {
+  .project-content {
+    float: left;
+    display: block;
+    margin-right: 2.36%;
+    width: 57.35%; }
+    .project-content:last-child {
+      margin-right: 0; } }
+
+.project-sidebar {
+  margin-top: 3rem; }
+  @media screen and (min-width: 1000px) {
+    .project-sidebar {
+      margin-top: 0;
+      float: left;
+      display: block;
+      margin-right: 2.36%;
+      width: 23.23%;
+      margin-left: 8.53%; }
+      .project-sidebar:last-child {
+        margin-right: 0; } }
+
+@media screen and (min-width: 1000px) {
+  .project-sidebar__group {
+    border-left: 1px solid black;
+    padding-left: 1rem; } }
 
 .member-heading:before {
   content: attr(data-title);
