--- a/assets/css/sass/blocks/_section.scss
+++ b/assets/css/sass/blocks/_section.scss
@@ -29,7 +29,7 @@
 .section__sidebar {
     @include media($md) {
         order: 2;
-        margin-bottom: $leading * 6;
+        padding-bottom: $leading * 6;
         .footer & {
             margin-bottom: 0;
         }
