--- a/assets/css/sass/style.scss
+++ b/assets/css/sass/style.scss
@@ -53,5 +53,6 @@
     "views/content",
     "views/footer",
     "views/header",
+    "views/single-project-timeline",
     "views/single-project",
     "views/single-team-member";
