project timeline: current states for filters

--- a/assets/css/sass/views/_single-project-timeline.scss
+++ b/assets/css/sass/views/_single-project-timeline.scss
@@ -20,6 +20,12 @@
         @include span-columns(8 of 10);
         float: none;
     }
+
+    .layout-project-stage {
+        & > *:first-child {
+            margin-top: 0;
+        }
+    }
     
     .layout-event {
         .image {
