--- a/assets/css/sass/views/_single-project-timeline.scss
+++ b/assets/css/sass/views/_single-project-timeline.scss
@@ -7,22 +7,34 @@
     }
 }
 
-.project-timeline__items {
+.project-timeline__nodes {
     @include media($lg) {
         @include flex-basis( flex-grid(10, $grid-columns) );
     }
 }
 
-.project-timeline__item {
+.timeline-node {
     padding-bottom: 5 * $leading;
+    @include transition(opacity 300ms ease-out);
     &:not(:first-child) {
         padding-top: 1 * $leading;
+    }
+    .is-loading &,
+    .has-scroll-events &:not(.is-active) {
+        opacity: 0.3;
+        pointer-events: none;
+    }
+    .no-js & {
+        opacity: 1 !important;
+        pointer-events: all !important;
     }
 
     .layout-project-stage,
     .layout-events-recap {
-        @include span-columns(8 of 10);
-        float: none;
+        @include media($lg) {
+            @include span-columns(8 of 10);
+            float: none;
+        }
     }
 
     .layout-project-stage {
@@ -42,6 +54,12 @@
                 @include span-columns(6 of 10);
             }
         }
+        .title {
+            @extend .u-mt-nudge;
+            @include media($lg) {
+                margin-top: -0.18em;
+            }
+        }
     }
 
     .layout-events-recap {
@@ -53,14 +71,6 @@
                 @include span-columns(2 of 8);
             }
         }
-        // .content {
-        //     @include media($lg) {
-        //         @include span-columns(4 of 8);
-        //     }
-        //     @include media($lg) {
-        //         @include span-columns(6 of 8);
-        //     }
-        // }
     }
 
 }
@@ -82,7 +92,15 @@
 }
 
 .project-timeline__sidebar-item {
-    a:hover, a:focus {
-        color: $green;
-    }
+    a {
+        opacity: 0.3;
+        &:hover, &:focus {
+            color: $green;
+            opacity: 1;
+        }
+        &.is-active {
+            opacity: 1;
+            color: black;
+        }
+    } 
 }
